--- a/package.json
+++ b/package.json
@@ -6,18 +6,14 @@
   "scripts": {
     "build": "npm run build --ws --if-present",
     "dev": "npm run dev --w=@web3modal/core & npm run dev --w=@web3modal/ui & npm run dev --w=@web3modal/ethereum & npm run dev --w=@web3modal/react",
-    "dev:react": "npm run dev --w=react-example",
-    "dev:react-standalone": "npm run dev -w=react-standalone-example",
-    "dev:html": "npm run dev --w=html-example",
-    "dev:html-standalone": "npm run dev --w=html-standalone-example",
-    "dev:lab": "npm run dev --w=laboratory",
     "lint": "eslint .",
     "prettier": "prettier --check .",
     "typecheck": "npm run typecheck --ws --if-present",
     "new-version": "lerna version --no-git-tag-version --exact",
     "pre-publish": "npm run lint; npm run typecheck; npm run prettier; npm run build; npm run new-version",
     "publish:latest": "lerna exec -- npm publish --no-private --access public --tag latest",
-    "publish:canary": "lerna exec -- npm publish --no-private --access public --tag canary"
+    "publish:canary": "lerna exec -- npm publish --no-private --access public --tag canary",
+    "start": "npm run dev & npm run dev -w=app"
   },
   "workspaces": [
     "chains/ethereum",
@@ -26,11 +22,7 @@
     "packages/react",
     "packages/html",
     "packages/standalone",
-    "examples/react",
-    "examples/react-standalone",
-    "examples/html",
-    "examples/html-standalone",
-    "examples/laboratory"
+    "app"
   ],
   "devDependencies": {
     "@types/node": "18.11.18",
@@ -39,7 +31,6 @@
     "esbuild": "0.17.5",
     "eslint": "8.33.0",
     "eslint-config-prettier": "8.6.0",
-    "lerna": "6.4.1",
     "prettier": "2.8.3",
     "rollup": "3.12.1",
     "rollup-plugin-esbuild": "5.0.0",
